<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2024 David Allison <davidallisongithub@gmail.com>
  ~
  ~  This program is free software; you can redistribute it and/or modify it under
  ~  the terms of the GNU General Public License as published by the Free Software
  ~  Foundation; either version 3 of the License, or (at your option) any later
  ~  version.
  ~
  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  ~  PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License along with
  ~  this program.  If not, see <http://www.gnu.org/licenses/>.
  -->


<com.google.android.material.textfield.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_text_input_layout"
    android:imeOptions="actionDone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/content_vertical_padding"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="4dp"
    app:errorEnabled="true"
    android:paddingTop="16dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialog_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:singleLine="true"
        android:maxLines="1"
        />
</com.google.android.material.textfield.TextInputLayout>
