...
                android:visibility="gone"
                tools:visibility="visible"
                />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_main"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="16dp"
...
