...
    <string name="sd_card_full_title">SD card full</string>
    <string name="sd_card_almost_full_title">SD card almost full</string>
    <string name="restore_backup_title">Restore backup?</string>
    <string name="restore_backup">Your collection will be replaced with an older copy. Any unsaved progress will be lost.</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_neutral_later">Later</string>
    <string name="dialog_positive_create">Create</string>
    <string name="dialog_positive_delete">Delete</string>
    <string name="dialog_positive_disable">Disable</string>
    <string name="dialog_positive_overwrite">Overwrite</string>
...
