...
    <string name="intro_sync_from_ankiweb">Sync from AnkiWeb</string>

    <!-- IntentHandler -->
    <string name="app_not_initialized_new">AnkiDroid is not initialized yet. Please open AnkiDroid and try again</string>

    <!-- Deck Creation -->
    <string name="deck_created">Deck created</string>
    <string name="deck_renamed">Deck renamed</string>

    <!-- Deck Deletion -->
    <string name="deck_shortcut_doesnt_exist">Deck deleted. Please remove the shortcut</string>

    <!-- Browser Options Dialog -->
...
