...
            </LinearLayout>

            <LinearLayout
                style="@style/FooterButton"
                android:background="?attr/hardButtonRef"
                android:id="@+id/flashcard_layout_ease2"
                android:nextFocusRight="@id/flashcard_layout_ease3"
                android:nextFocusLeft="@id/flashcard_layout_ease1"
                android:layout_width="0dip"
                android:layout_height="?minTouchTargetSize"
                android:layout_weight="1"
                android:orientation="vertical"
                android:theme="@style/HardButton"
...
                    android:text="@string/ease_button_easy"
                    style="@style/EasyButtonEaseStyle" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/flashcard_layout_flip"
            android:layout_width="match_parent"
            android:layout_height="?minTouchTargetSize"
            android:orientation="vertical"
            android:focusable="true"
            android:background="?attr/hardButtonRef"
            tools:visibility="visible"
...
