...
    >

    <com.ichi2.preferences.HtmlHelpPreference
        android:summary="@string/new_study_screen_summ"
        app:substitution1="@string/link_anki_forum_ankidroid"
        app:substitution2="@string/link_help"
        search:ignore="true"
        />

    <SwitchPreferenceCompat
        android:key="@string/new_reviewer_options_key"
        android:title="@string/new_study_screen"
        android:defaultValue="false"
        search:ignore="true"
        />

    <PreferenceCategory android:title="@string/screen">
...
