...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/shadow_left"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/studyoptions_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:layout_marginBottom="32dp"
            android:text="@string/studyoptions_start"
            app:layout_constraintBottom_toBottomOf="parent"
...
