<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.ClosableDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                           android:id="@+id/drawer_layout"
                                           android:layout_width="match_parent"
                                           android:layout_height="match_parent">
    <include layout="@layout/navigation_drawer" />
</androidx.drawerlayout.widget.ClosableDrawerLayout>