...
            android:layout_marginBottom="12dp"
            android:maxWidth="500dp"
            android:paddingHorizontal="30dp"
            android:text="@string/intro_short_ankidroid_explanation"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/get_started"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started"
            android:layout_width="wrap_content"
...
